--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,2 +1,2 @@
-#Thu Dec 19 17:18:40 GMT-03:00 2013
-config.resources=businessLogic.xml,config.xml,errorHandling.xml,inboundEndpoints.xml
+#Tue Jan 07 17:49:39 ART 2014
+config.resources=
