Corrected logic for custom object creation and insertion

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,2 +1,2 @@
 #Tue Jan 07 17:49:39 ART 2014
-config.resources=
+config.resources=config.xml, businessLogic.xml, errorHandling.xml, inboundEndpoints.xml
