--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,8 @@
 	</properties>
 
 	<build>
-		<!-- Use a newer version of the install plugin than what your Maven uses 
-			by default. The older version failed to install the project if there was 
-			no target/classes folder. Since we use mule packaging on the project we actually 
-			create and attach the zip that must be installed. -->
+		<!-- Use a newer version of the install plugin than what your Maven uses by default. The older version failed to install the project if there 
+			was no target/classes folder. Since we use mule packaging on the project we actually create and attach the zip that must be installed. -->
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -35,8 +33,7 @@
 					<artifactId>maven-install-plugin</artifactId>
 					<version>2.3.1</version>
 				</plugin>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
-					only. It has no influence on the Maven build itself. -->
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -228,8 +225,7 @@
 						<configuration>
 							<tasks>
 								<!-- Using an ant task to deflate cloveretl-engine.zip -->
-								<unzip dest="${project.build.testOutputDirectory}"
-									src="${project.build.testOutputDirectory}/cloveretl-engine.zip" />
+								<unzip dest="${project.build.testOutputDirectory}" src="${project.build.testOutputDirectory}/cloveretl-engine.zip" />
 							</tasks>
 						</configuration>
 						<goals>
