Changed log4j properties for test to only log errors

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -16,7 +16,7 @@ log4j.logger.org.apache.cxf=WARN
 log4j.logger.org.apache=WARN
 
 # Reduce startup noise
-log4j.logger.org.springframework.beans.factory=WARN
+log4j.logger.org.springframework.beans.factory=ERROR
 
 # Mule classes
-log4j.logger.org.mule=INFO
+log4j.logger.org.mule=ERROR
