Changed kick to use batch module

--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,10 @@
 	</properties>
 
 	<build>
-		<!-- Use a newer version of the install plugin than what your Maven uses by default. The older version failed to install the project if there 
-			was no target/classes folder. Since we use mule packaging on the project we actually create and attach the zip that must be installed. -->
+		<!-- Use a newer version of the install plugin than what your Maven uses 
+			by default. The older version failed to install the project if there was 
+			no target/classes folder. Since we use mule packaging on the project we actually 
+			create and attach the zip that must be installed. -->
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -33,7 +35,8 @@
 					<artifactId>maven-install-plugin</artifactId>
 					<version>2.3.1</version>
 				</plugin>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -251,7 +254,8 @@
 						<configuration>
 							<tasks>
 								<!-- Using an ant task to deflate cloveretl-engine.zip -->
-								<unzip dest="${project.build.testOutputDirectory}" src="${project.build.testOutputDirectory}/cloveretl-engine.zip" />
+								<unzip dest="${project.build.testOutputDirectory}"
+									src="${project.build.testOutputDirectory}/cloveretl-engine.zip" />
 							</tasks>
 						</configuration>
 						<goals>
@@ -409,6 +413,13 @@
 			<version>${mule.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mule.transports</groupId>
+			<artifactId>mule-transport-email</artifactId>
+			<version>${mule.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 		<!-- Mule Modules -->
 		<dependency>
@@ -452,6 +463,12 @@
 			<artifactId>mule-module-json</artifactId>
 			<version>${mule.version}</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.mulesoft.muleesb.modules</groupId>
+			<artifactId>mule-module-batch-ee</artifactId>
+			<version>${mule.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Connectors -->
@@ -497,6 +514,12 @@
 			<groupId>org.mule.munit</groupId>
 			<artifactId>munit-runner</artifactId>
 			<version>${munit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
