--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,2 +1,2 @@
-#Tue Jan 07 17:49:39 ART 2014
-config.resources=config.xml, businessLogic.xml, errorHandling.xml, inboundEndpoints.xml
+#Wed Jan 29 18:45:23 ART 2014
+config.resources=businessLogic.xml,config.xml,errorHandling.xml,inboundEndpoints.xml
