--- a/pom.xml
+++ b/pom.xml
@@ -3,24 +3,21 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.mule.kicks</groupId>
-	<artifactId>sfdc2sfdc-customobjectsync</artifactId>
+	<groupId>org.mule.templates</groupId>
+	<artifactId>sfdc2sfdc-customobject-migration</artifactId>
 	<packaging>mule</packaging>
-	<version>1.0.0-SNAPSHOT</version>
-	<name>sfdc2sfdc-customobjectsync Mule Kick Project</name>
+	<version>1.0.0</version>
+	<name>SFDC2SFDCCustomObjectMigration Mule Template Project</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<mule.version>3.5.0-cascade</mule.version>
+		<mule.version>3.5.0-M4</mule.version>
 		<sfdc.version>5.4.3</sfdc.version>
-
 		<eclipsePluginVersion>2.8</eclipsePluginVersion>
 		<jdkName>JavaSE-1.6</jdkName>
 		<jdk.version>1.6</jdk.version>
 		<junit.version>4.9</junit.version>
-		<munit.version>3.4-M4-SNAPSHOT</munit.version>
 	</properties>
 
 	<build>
@@ -509,18 +506,25 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- Munit -->
 		<dependency>
-			<groupId>org.mule.munit</groupId>
-			<artifactId>munit-runner</artifactId>
-			<version>${munit.version}</version>
+			<groupId>com.mulesoft.muleesb.modules</groupId>
+			<artifactId>mule-module-batch-ee</artifactId>
+			<version>${mule.version}</version>
 			<scope>test</scope>
+			<type>test-jar</type>
 		</dependency>
 		<dependency>
-			<groupId>xalan</groupId>
-			<artifactId>xalan</artifactId>
-			<version>2.7.1</version>
+			<groupId>org.mule.tests</groupId>
+			<artifactId>mule-tests-functional</artifactId>
+			<version>${mule.version}</version>
 			<scope>test</scope>
+			<type>test-jar</type>
+		</dependency>
+		<dependency>
+             <groupId>xalan</groupId>
+             <artifactId>xalan</artifactId>
+             <version>2.7.1</version>
+             <scope>test</scope>
 		</dependency>
 	</dependencies>
 
