--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,2 +1,2 @@
 #Wed Jan 29 18:45:23 ART 2014
-config.resources=businessLogic.xml,config.xml,errorHandling.xml,inboundEndpoints.xml
+config.resources=businessLogic.xml,config.xml,errorHandling.xml,endpoints.xml
