Tune Up of template

--- a/src/main/resources/mule.qa.properties
+++ b/src/main/resources/mule.qa.properties
@@ -14,3 +14,14 @@ sfdc.b.username=
 sfdc.b.password=
 sfdc.b.securityToken=
 sfdc.b.url=
+
+# SMTP Services configuration
+smtp.host=smtp.gmail.com
+smtp.port=587
+smtp.user=
+smtp.password=
+
+# Mail details
+mail.from=
+mail.to=
+mail.subject=Batch Job Finished Report
