--- a/src/main/app/mule-app.properties
+++ b/src/main/app/mule-app.properties
@@ -1,4 +1,4 @@
 #** GENERATED CONTENT ** Mule Custom Properties file.
 #Thu Dec 05 10:15:07 GMT-03:00 2013
 mule.env=dev
-secure.properties=sfdc.a.password,sfdc.b.password,sfdc.a.securityToken,sfdc.b.securityToken
+secure.properties=sfdc.a.password,sfdc.b.password,sfdc.a.securityToken,sfdc.b.securityToken,smtp.password
