--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,16 @@
 	<name>SFDC2SFDCCustomObjectMigration Mule Template Project</name>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<mule.version>3.5.0-M4</mule.version>
 		<sfdc.version>5.4.3</sfdc.version>
-		<eclipsePluginVersion>2.8</eclipsePluginVersion>
+		<junit.version>4.9</junit.version>
+
 		<jdkName>JavaSE-1.6</jdkName>
 		<jdk.version>1.6</jdk.version>
-		<junit.version>4.9</junit.version>
+		<eclipsePluginVersion>2.8</eclipsePluginVersion>
+
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 
 	<build>
@@ -94,6 +96,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.14.1</version>
 				<configuration>
+					<useFile>false</useFile>
 					<additionalClasspathElements>
 						<additionalClasspathElement>${MULE_HOME}/conf</additionalClasspathElement>
 						<!-- Location of the mule licence in Bamboo muleLicenseKey.lic -->
@@ -468,14 +471,20 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Connectors -->
-		<dependency>
-			<groupId>org.mule.modules</groupId>
-			<artifactId>mule-module-sfdc</artifactId>
-			<version>${sfdc.version}</version>
-		</dependency>
 
 		<!-- for testing -->
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.9.1</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.mule.tests</groupId>
 			<artifactId>mule-tests-functional</artifactId>
@@ -520,11 +529,12 @@
 			<scope>test</scope>
 			<type>test-jar</type>
 		</dependency>
+
+		<!-- Connectors -->
 		<dependency>
-             <groupId>xalan</groupId>
-             <artifactId>xalan</artifactId>
-             <version>2.7.1</version>
-             <scope>test</scope>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-module-sfdc</artifactId>
+			<version>${sfdc.version}</version>
 		</dependency>
 	</dependencies>
 
