--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,9 @@
 	<name>SFDC2SFDCCustomObjectMigration Mule Template Project</name>
 
 	<properties>
-		<mule.version>3.5.0-M4</mule.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<mule.version>3.5.0</mule.version>
 		<sfdc.version>5.4.3</sfdc.version>
 		<junit.version>4.9</junit.version>
 
@@ -518,13 +520,6 @@
 		<dependency>
 			<groupId>com.mulesoft.muleesb.modules</groupId>
 			<artifactId>mule-module-batch-ee</artifactId>
-			<version>${mule.version}</version>
-			<scope>test</scope>
-			<type>test-jar</type>
-		</dependency>
-		<dependency>
-			<groupId>org.mule.tests</groupId>
-			<artifactId>mule-tests-functional</artifactId>
 			<version>${mule.version}</version>
 			<scope>test</scope>
 			<type>test-jar</type>
