--- a/src/main/resources/common.properties
+++ b/src/main/resources/common.properties
@@ -1,4 +1,8 @@
-# Common Application configuration
+# Properties to be used across all the environments. They can be overwritten.
 
-# Application configuration
 http.port=9090
+page.size=1000
+
+# Mail details
+mail.subject=Batch Job Finished Report
+
