--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -1,7 +1,4 @@
-# Properties to be used on the qa environment
-
-# Application Configuration
-page.size=1000
+# Properties to be used on the development environment
 
 # SalesForce Connector configuration for company A
 sfdc.a.username=
@@ -16,12 +13,11 @@ sfdc.b.securityToken=
 sfdc.b.url=
 
 # SMTP Services configuration
-smtp.host=smtp.gmail.com
-smtp.port=587
+smtp.host=
+smtp.port=
 smtp.user=
 smtp.password=
 
 # Mail details
 mail.from=
 mail.to=
-mail.subject=Batch Job Finished Report
