Updated flow, last modified is not used for migration salesforce custom objects. Removed redundant (date)utility classes

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,2 +1,2 @@
-#Wed Jan 29 18:45:23 ART 2014
-config.resources=businessLogic.xml,config.xml,errorHandling.xml,endpoints.xml
+#Fri Aug 08 10:52:25 CEST 2014
+config.resources=errorHandling.xml,endpoints.xml,config.xml,businessLogic.xml
