Added template structure

--- a/src/main/resources/mule.dev.properties
+++ b/src/main/resources/mule.dev.properties
@@ -10,7 +10,7 @@ sfdc.b.username=
 sfdc.b.password=
 sfdc.b.securityToken=
 
-# SMPT Services configuration
+# SMTP Services configuration
 smtp.host=
 smtp.port=
 smtp.user=
